--- a/example1.html
+++ b/example1.html
@@ -20,35 +20,14 @@
 			combine: true,
 			modules: {
 				'yui-cornify': {
-					fullpath: 'http://derekgathright.com/yahoo/yui/yui-cornify/yui-cornify.js'
+					fullpath: 'http://github.com/drgath/yui-cornify/raw/master/yui-cornify.js'
 				}
 			}
-		}).use('node', 'yui-cornify', function (Y) {
-
-			var clicks = 0, 
-				msgs = [
-					'OMG, this is so much fun',
-					'Weeeeeeee!!!!!',
-					'I can\'t stop clicking!',
-					'OMG, this is so much fun',
-					'More! More! Give me more!',
-					'They are so pretty!!!'
-				];
-
-			Y.one('#pwnies').on('click', function () {
-				var msg;
-
-				clicks = clicks + 1;
-
-				if (clicks % 3 === 0) {
-					do {
-						msg = msgs[Math.floor(Math.random() * msgs.length)];
-					} while (msg === Y.one('#pwnies').get('value'));
-					Y.one('#pwnies').set('value', msg);
-				}
-
+		}).use('yui-cornify', function (Y) {
+			
+			setInterval(function addCorn(){
 				Y.addCorn();
-			});
+			}, 500);
 
 		});
 
@@ -56,7 +35,6 @@
 	</head>
 
 	<body>
-		--&gt; <input type="button" id="pwnies" value="I really want to see something happy, so I'm going to click this button" /> &lt;--
 	</body>
 
 </html>
