--- a/example3.html
+++ b/example3.html
@@ -35,7 +35,7 @@
 					'They are so pretty!!!'
 				];
 
-			Y.one('#pwnies').on('click', function () {
+			Y.one('#pwnies').on('click', function (e) {
 				var msg;
 
 				clicks = clicks + 1;
@@ -56,7 +56,7 @@
 	</head>
 
 	<body>
-		--&gt; <input type="button" id="pwnies" value="I really want to see something happy, so I'm going to click this button" /> &lt;--
+		--&gt; <input type="button" id="pwnies" value="I really want to see something happy, so I'm going to click this button over and over" /> &lt;--
 	</body>
 
 </html>
